<resources>
    <string name="app_name">YT_RemoteControl</string>
    <color name="dodgerblue">#1E90FF</color>
    <string name="logo_str">My TV</string>
    <string name="power_str">TV Power: </string>
    <string name="volume_str">Speaker Volume: </string>
    <string name="channel_str">Current Channel: </string>
    <string name="power_state_str">ON</string>
    <string name="volume_state_str">50</string>
    <string name="channel_state_str">187</string>
    <string name="control_str">My Remote Control</string>
    <string name="power_control_str">Power</string>
    <string name="volume_control_str">Volume</string>
    <string name="channel_control">Channel</string>
    <string name="favorite_channel">Favorite\nChannel</string>
    <string name="b0">0</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="bPlus">CH+</string>
    <string name="bMinus">CH-</string>
    <string name="bF1">ABC</string>
    <string name="bF2">NBC</string>
    <string name="bF3">CBS</string>
</resources>
