<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/dodgerblue">

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:text="@string/logo_str"
            android:textSize="30sp" />


        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:useDefaultMargins="true">

            <TextView
                android:id="@+id/power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/power_str"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/power_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:paddingLeft="20dp"
                android:text="@string/power_state_str"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/volume_str"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/volume_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:paddingLeft="20dp"
                android:text="@string/volume_state_str"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/channel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/channel_str"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/channel_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:paddingLeft="20dp"
                android:text="@string/channel_state_str"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

        </GridLayout>
    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/control"
            android:layout_columnSpan="4"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/control_str"
            android:textSize="25sp" />

        <TextView
            android:text="@string/power_control_str"
            android:textSize="16sp"/>

        <Switch
            android:id="@+id/power_switch"
            android:layout_columnSpan="3"
            android:layout_gravity="center_horizontal"
            android:checked="true"
            android:onClick="onSwitchClicked"
            android:tag="power_switch"
            android:layout_width="wrap_content"
            android:paddingBottom="10dp"/>

        <TextView
            android:text="@string/volume_control_str"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/volume_SeekBar"
            android:layout_columnSpan="3"
            android:layout_gravity="fill"
            android:max="100"
            android:progress="50"
            android:paddingBottom="10dp"/>


        <TextView
            android:layout_height="wrap_content"
            android:text="@string/channel_control"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button0"
            android:text="@string/b0"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button1"
            android:text="@string/b1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button2"
            android:text="@string/b2"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button3"
            android:layout_column="1"
            android:text="@string/b3"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button4"
            android:text="@string/b4"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button5"
            android:text="@string/b5"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button6"
            android:layout_column="1"
            android:text="@string/b6"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button7"
            android:text="@string/b7"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button8"
            android:text="@string/b8"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button9"
            android:layout_column="1"
            android:text="@string/b9"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonPlus"
            android:text="@string/bPlus"
            tools:ignore="ButtonStyle,HardcodedText" />

        <Button
            android:id="@+id/buttonMinus"
            android:text="@string/bMinus"
            tools:ignore="ButtonStyle" />

        <TextView
            android:layout_width="60dp"
            android:text="@string/favorite_channel"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonF1"
            android:text="@string/bF1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonF2"
            android:text="@string/bF2"
            tools:ignore="ButtonStyle,HardcodedText" />

        <Button
            android:id="@+id/buttonF3"
            android:text="@string/bF3"
            tools:ignore="ButtonStyle" />


    </GridLayout>

</LinearLayout>